[package]
name = "erfps2"
version = "0.1.12-hotfix"
edition = "2024"
authors = ["Dasaav"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
eldenring.path = "fromsoftware-rs/crates/eldenring"
eyre = "0.6.12"
fromsoftware-shared.path = "fromsoftware-rs/crates/shared"
glam = "0.30.9"
simplelog = { version = "0.12.2", default-features = false }
libhotpatch = { version = "1.1.0", default-features = false }
log = "0.4.28"
windows = { version = "0.62.2", features = [
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }
winhook = "0.1.2"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["serde_derive"] }
closure-ffi = "5.0.1"
pelite = "0.10.0"
strum = { version = "0.27.2", features = ["derive"] }
bitvec = "1.0.1"
